--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -1,12 +1,6 @@
-{% extends "layouts/main.html" %} 
-
-{% block content %} 
-
-{% include "pages/main-page.html" %}
-{% include "pages/about.html" %}
-{% include "pages/advantages.html" %}
-{% include "pages/achievement.html" %}
-{% include "pages/partner.html" %}
-{% include "pages/more-than-distribution.html" %}
-
-{% endblock %}
+{% extends "layouts/main.html" %} {% block content %} {% include
+"pages/main-page.html" %} {% include "pages/about.html" %} {% include
+"pages/advantages.html" %} {% include "pages/achievement.html" %} {% include
+"pages/partner.html" %} {% include "pages/offers-distribution.html" %} {%
+include "pages/how-we-work.html" %} {% include
+"pages/more-than-distribution.html" %} {% endblock %}
