--- a/src/html/pages/advantages.html
+++ b/src/html/pages/advantages.html
@@ -1,90 +1,193 @@
 <section class="advateges">
-
-    <div class="container">
-        <h2 class="title">
-            ПРЕИМУЩЕСТВА РАБОТЫ С НАМИ
-        </h2>
-            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="animation: push; autoplay: true">
-
-                <ul class="uk-slideshow-items">
-                    <li>
-                        <div class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
-                            <img src="../../img/advantages/advantages.png" alt="" uk-cover>
-                        </div>
-                        <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m  uk-position-center-right">
-                            <h3 class="uk-card-title">Сбалансированная ассортиментная нагрузка на торгового представителя.</h3>
-                            <ul class="uk-list uk-list-disc">
-                                <li>Исключается каннибализм избыточным ассортиментом.Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                                <li>Эффективный контроль представленности продукции в торговых точках.</li>
-                                <li>Индивидуальный подход к клиенту.</li>
-                                <li>Складское хозяйство с ЖД тупиками.</li>
-                                <li>Высокая механизация складов.</li>
-                                <li>Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
-                            <img src="https://thumbs.dreamstime.com/b/bearded-man-laptop-online-business-icons-serious-young-businessman-glasses-using-blurry-room-double-exposure-immersive-181501835.jpg" alt="" uk-cover>
-                        </div>
-                        <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m  uk-position-center-right">
-                            <h3 class="uk-card-title">Сбалансированная ассортиментная нагрузка на торгового представителя.</h3>
-                            <ul class="uk-list uk-list-disc">
-                                <li>Исключается каннибализм избыточным ассортиментом.Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                                <li>Эффективный контроль представленности продукции в торговых точках.</li>
-                                <li>Индивидуальный подход к клиенту.</li>
-                                <li>Складское хозяйство с ЖД тупиками.</li>
-                                <li>Высокая механизация складов.</li>
-                                <li>Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
-                            <img src="../../img/advantages/advantages.png" alt="" uk-cover>
-                        </div>
-                        <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m  uk-position-center-right">
-                            <h3 class="uk-card-title">Сбалансированная ассортиментная нагрузка на торгового представителя.</h3>
-                            <ul class="uk-list uk-list-disc">
-                                <li>Исключается каннибализм избыточным ассортиментом.Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                                <li>Эффективный контроль представленности продукции в торговых точках.</li>
-                                <li>Индивидуальный подход к клиенту.</li>
-                                <li>Складское хозяйство с ЖД тупиками.</li>
-                                <li>Высокая механизация складов.</li>
-                                <li>Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
-                            <img src="https://thumbs.dreamstime.com/b/bearded-man-laptop-online-business-icons-serious-young-businessman-glasses-using-blurry-room-double-exposure-immersive-181501835.jpg" alt="" uk-cover>
-                        </div>
-                        <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m  uk-position-center-right">
-                            <h3 class="uk-card-title">Сбалансированная ассортиментная нагрузка на торгового представителя.</h3>
-                            <ul class="uk-list uk-list-disc">
-                                <li>Исключается каннибализм избыточным ассортиментом.Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                                <li>Эффективный контроль представленности продукции в торговых точках.</li>
-                                <li>Индивидуальный подход к клиенту.</li>
-                                <li>Складское хозяйство с ЖД тупиками.</li>
-                                <li>Высокая механизация складов.</li>
-                                <li>Постоянные программы обучения сотрудников, повышения навыков торговой команды, традиции и наставничество над новыми сотрудниками.</li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-                <div class="advantages_arrows">
-                    <a class="uk-position-top-right uk-position-small" uk-slideshow-item="previous">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="17" viewBox="0 0 11 17" fill="none">
-                            <path d="M4.4207 8.01667L9.81654 2.62083C10.4332 2.00417 10.4332 1.07917 9.81654 0.4625C9.19987 -0.154167 8.27487 -0.154167 7.6582 0.4625L1.1832 6.9375C0.566536 7.55417 0.566536 8.47917 1.1832 9.09583L7.6582 15.5708C7.96654 15.8792 8.27487 16.0333 8.73737 16.0333C9.19987 16.0333 9.5082 15.8792 9.81654 15.5708C10.4332 14.9542 10.4332 14.0292 9.81654 13.4125L4.4207 8.01667Z" fill="#76A0CD"/>
-                        </svg>
-                    </a>
-                    <a class="uk-position-top-right uk-position-small" uk-slideshow-item="next">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="17" viewBox="0 0 11 17" fill="none">
-                            <path d="M6.5793 8.98333L1.18346 14.3792C0.566795 14.9958 0.566795 15.9208 1.18346 16.5375C1.80013 17.1542 2.72513 17.1542 3.3418 16.5375L9.8168 10.0625C10.4335 9.44583 10.4335 8.52083 9.8168 7.90417L3.3418 1.42917C3.03346 1.12084 2.72513 0.966667 2.26263 0.966667C1.80013 0.966667 1.4918 1.12084 1.18346 1.42917C0.566795 2.04584 0.566795 2.97083 1.18346 3.5875L6.5793 8.98333Z" fill="#76A0CD"/>
-                          </svg>
-                    </a>
-                </div>
-            </div>
+  <div class="container">
+    <h2 class="title">ПРЕИМУЩЕСТВА РАБОТЫ С НАМИ</h2>
+    <div
+      class="uk-position-relative uk-visible-toggle uk-light"
+      tabindex="-1"
+      uk-slideshow="animation: push; autoplay: true"
+    >
+      <ul class="uk-slideshow-items">
+        <li>
+          <div
+            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
+          >
+            <img src="../../img/advantages/advantages.png" alt="" uk-cover />
+          </div>
+          <div
+            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
+          >
+            <h3 class="uk-card-title">
+              Сбалансированная ассортиментная нагрузка на торгового
+              представителя.
+            </h3>
+            <ul class="uk-list uk-list-disc">
+              <li>
+                Исключается каннибализм избыточным ассортиментом.Постоянные
+                программы обучения сотрудников, повышения навыков торговой
+                команды, традиции и наставничество над новыми сотрудниками.
+              </li>
+              <li>
+                Эффективный контроль представленности продукции в торговых
+                точках.
+              </li>
+              <li>Индивидуальный подход к клиенту.</li>
+              <li>Складское хозяйство с ЖД тупиками.</li>
+              <li>Высокая механизация складов.</li>
+              <li>
+                Постоянные программы обучения сотрудников, повышения навыков
+                торговой команды, традиции и наставничество над новыми
+                сотрудниками.
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div
+            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
+          >
+            <img
+              src="https://thumbs.dreamstime.com/b/bearded-man-laptop-online-business-icons-serious-young-businessman-glasses-using-blurry-room-double-exposure-immersive-181501835.jpg"
+              alt=""
+              uk-cover
+            />
+          </div>
+          <div
+            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
+          >
+            <h3 class="uk-card-title">
+              Сбалансированная ассортиментная нагрузка на торгового
+              представителя.
+            </h3>
+            <ul class="uk-list uk-list-disc">
+              <li>
+                Исключается каннибализм избыточным ассортиментом.Постоянные
+                программы обучения сотрудников, повышения навыков торговой
+                команды, традиции и наставничество над новыми сотрудниками.
+              </li>
+              <li>
+                Эффективный контроль представленности продукции в торговых
+                точках.
+              </li>
+              <li>Индивидуальный подход к клиенту.</li>
+              <li>Складское хозяйство с ЖД тупиками.</li>
+              <li>Высокая механизация складов.</li>
+              <li>
+                Постоянные программы обучения сотрудников, повышения навыков
+                торговой команды, традиции и наставничество над новыми
+                сотрудниками.
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div
+            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
+          >
+            <img src="../../img/advantages/advantages.png" alt="" uk-cover />
+          </div>
+          <div
+            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
+          >
+            <h3 class="uk-card-title">
+              Сбалансированная ассортиментная нагрузка на торгового
+              представителя.
+            </h3>
+            <ul class="uk-list uk-list-disc">
+              <li>
+                Исключается каннибализм избыточным ассортиментом.Постоянные
+                программы обучения сотрудников, повышения навыков торговой
+                команды, традиции и наставничество над новыми сотрудниками.
+              </li>
+              <li>
+                Эффективный контроль представленности продукции в торговых
+                точках.
+              </li>
+              <li>Индивидуальный подход к клиенту.</li>
+              <li>Складское хозяйство с ЖД тупиками.</li>
+              <li>Высокая механизация складов.</li>
+              <li>
+                Постоянные программы обучения сотрудников, повышения навыков
+                торговой команды, традиции и наставничество над новыми
+                сотрудниками.
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div
+            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
+          >
+            <img
+              src="https://thumbs.dreamstime.com/b/bearded-man-laptop-online-business-icons-serious-young-businessman-glasses-using-blurry-room-double-exposure-immersive-181501835.jpg"
+              alt=""
+              uk-cover
+            />
+          </div>
+          <div
+            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
+          >
+            <h3 class="uk-card-title">
+              Сбалансированная ассортиментная нагрузка на торгового
+              представителя.
+            </h3>
+            <ul class="uk-list uk-list-disc">
+              <li>
+                Исключается каннибализм избыточным ассортиментом.Постоянные
+                программы обучения сотрудников, повышения навыков торговой
+                команды, традиции и наставничество над новыми сотрудниками.
+              </li>
+              <li>
+                Эффективный контроль представленности продукции в торговых
+                точках.
+              </li>
+              <li>Индивидуальный подход к клиенту.</li>
+              <li>Складское хозяйство с ЖД тупиками.</li>
+              <li>Высокая механизация складов.</li>
+              <li>
+                Постоянные программы обучения сотрудников, повышения навыков
+                торговой команды, традиции и наставничество над новыми
+                сотрудниками.
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+      <div class="advantages_arrows">
+        <a
+          class="uk-position-top-right uk-position-small"
+          uk-slideshow-item="previous"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="11"
+            height="17"
+            viewBox="0 0 11 17"
+            fill="none"
+          >
+            <path
+              d="M4.4207 8.01667L9.81654 2.62083C10.4332 2.00417 10.4332 1.07917 9.81654 0.4625C9.19987 -0.154167 8.27487 -0.154167 7.6582 0.4625L1.1832 6.9375C0.566536 7.55417 0.566536 8.47917 1.1832 9.09583L7.6582 15.5708C7.96654 15.8792 8.27487 16.0333 8.73737 16.0333C9.19987 16.0333 9.5082 15.8792 9.81654 15.5708C10.4332 14.9542 10.4332 14.0292 9.81654 13.4125L4.4207 8.01667Z"
+              fill="#76A0CD"
+            />
+          </svg>
+        </a>
+        <a
+          class="uk-position-top-right uk-position-small"
+          uk-slideshow-item="next"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="11"
+            height="17"
+            viewBox="0 0 11 17"
+            fill="none"
+          >
+            <path
+              d="M6.5793 8.98333L1.18346 14.3792C0.566795 14.9958 0.566795 15.9208 1.18346 16.5375C1.80013 17.1542 2.72513 17.1542 3.3418 16.5375L9.8168 10.0625C10.4335 9.44583 10.4335 8.52083 9.8168 7.90417L3.3418 1.42917C3.03346 1.12084 2.72513 0.966667 2.26263 0.966667C1.80013 0.966667 1.4918 1.12084 1.18346 1.42917C0.566795 2.04584 0.566795 2.97083 1.18346 3.5875L6.5793 8.98333Z"
+              fill="#76A0CD"
+            />
+          </svg>
+        </a>
+      </div>
     </div>
-
+  </div>
 </section>
