done desktop & adaptive in progress

--- a/src/html/pages/partner.html
+++ b/src/html/pages/partner.html
@@ -3,8 +3,8 @@
     <h2 class="title">НАШИ ПАРТНЕРЫ</h2>
     <div class="partners_wrapper">
       <ul
-        class="partners_list"
-        uk-scrollspy="cls: uk-animation-slide-left; target: li; delay: 300; repeat: true"
+      class="partners_list uk-container-expand"
+      uk-scrollspy="cls: uk-animation-slide-left; target: li; delay: 300; repeat: true" 
       >
         <li>
           От фирменных алкогольных напитков до любимых брендов на рынке на рынке
@@ -30,13 +30,14 @@
         <div class="overlay-bg"></div>
         <div
           class="partners-slider uk-slider-container-offsetv"
-          uk-slider="autoplay: true; autoplay-interval: 3000"
+          uk-slider="autoplay: false; autoplay-interval: 3000"
+
         >
           <div
             class="uk-position-relative uk-visible-toggle uk-light"
             tabindex="-1"
           >
-            <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
+            <ul class="uk-slider-items uk-child-width-1-3@l uk-child-width-1-2@m uk-child-width-1-1@s uk-grid">
               <li>
                 <div class="uk-card uk-card-default">
                   <div class="uk-card-media-top">
