--- a/src/html/pages/main-page.html
+++ b/src/html/pages/main-page.html
@@ -1,7 +1,7 @@
-<section class="main_page">
-  <div class="main_wrapper" uk-parallax="bgy: -200">
+<section class="main_page" uk-parallax="bgy: -100">
+  <div class="main_wrapper">
     <div class="main_title_block">
-      <div class="main_title_wrapper">
+      <div class="main_title_wrapper" uk-parallax="target: .main_title; y: -50, 0; y: 100; easing: 2">
         <span class="main_line"></span>
         <h1 class="main_title">
           ВАШ НАДЕЖНЫЙ
@@ -12,7 +12,7 @@
         </h1>
       </div>
     </div>
-    <div class="main_banner" uk-parallax="target: .main_banner; y: 100,0">
+    <div class="main_banner">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="627"
