--- a/src/html/pages/how-we-work.html
+++ b/src/html/pages/how-we-work.html
@@ -35,5 +35,8 @@
         </div>
       </li>
     </ul>
+    <div class="mobile_list_img">
+      <img src="../../img/how_we_work/mob_group.svg" alt="">
+    </div>
   </div>
 </section>
