--- a/src/html/pages/main-page.html
+++ b/src/html/pages/main-page.html
@@ -1,7 +1,7 @@
 <section class="main_page" uk-parallax="bgy: -100">
   <div class="main_wrapper">
     <div class="main_title_block">
-      <div class="main_title_wrapper" uk-parallax="target: .main_title; y: -50, 0; y: 100; easing: 2">
+      <div class="main_title_wrapper">
         <span class="main_line"></span>
         <h1 class="main_title">
           ВАШ НАДЕЖНЫЙ
