--- a/src/html/pages/offers-distribution.html
+++ b/src/html/pages/offers-distribution.html
@@ -1,9 +1,11 @@
 <section class="distribution_offer pd-regular">
-  <div class="title_wrapp">
-    <h2 class="title">ПРЕДЛОЖЕНИЕ ПО ДИСТРИБЬЮЦИИ</h2>
-  </div>
-  <div class="container">
+  <div class="distribution_offer_header">
+    <div class="title_wrapp">
+      <h2 class="title">ПРЕДЛОЖЕНИЕ ПО ДИСТРИБЬЮЦИИ</h2>
+      <div class="mobile_img"></div>
+    </div>
     <ul class="list">
+      <h2 class="title_second">ПРЕДЛОЖЕНИЕ ПО ДИСТРИБЬЮЦИИ</h2>
       <li class="item">
         <div class="svg_wrapp">
           <svg
@@ -96,6 +98,9 @@
         <p>Особое внимание торговым сетям</p>
       </li>
     </ul>
+  </div>
+
+  <div class="container">
     <ul class="list-description">
       <li>
         <div class="svg_wrapp">
