--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -1,14 +1,14 @@
 <section class="about pd-regular">
   <div class="container">
     <h2
-      uk-parallax="opacity: .3,1; y: -20,0; scale: 1.2,1; end: 30vh + 30%;"
+      uk-parallax="opacity: 0,1; y: 0,0; scale: 1.2,1; end: 30vh + 30%;"
       class="title"
     >
       О КОМПАНИИ
     </h2>
     <ul
       class="about_list"
-      uk-parallax="opacity: 0,1; y: 50,0; end: 50vh + 50%;"
+      uk-parallax="opacity: 0,1; y: 100,0; end: 50vh + 50%;"
     >
       <li>
         <p>
