done all without content

--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -1,15 +1,15 @@
-<section class="about pd-regular">
+<section class="about pd-regular" id="about">
   <div class="container">
+    <!-- uk-parallax="opacity: 0,1; y: 0,0; scale: 1.2,1; end: 30vh + 30%;" -->
     <h2
-      uk-parallax="opacity: 0,1; y: 0,0; scale: 1.2,1; end: 30vh + 30%;"
       class="title"
     >
       О КОМПАНИИ
     </h2>
     <ul
-      class="about_list"
-      uk-parallax="opacity: 0,1; y: 100,0; end: 50vh + 50%;"
-    >
+      class="about_list">
+      <!-- uk-parallax="opacity: 0,1; y: 100,0; end: 50vh + 50%;" -->
+
       <li>
         <p>
           Компания «АДЖИП» начала свою историю в г. Атырау с мая 2017 г, прямая
