--- a/src/html/pages/achievement.html
+++ b/src/html/pages/achievement.html
@@ -1,4 +1,4 @@
-<section class="achievement pd-regular">
+<section class="achievement pd-regular" id="achievement">
   <div class="container">
     <h2 class="title">НАШИ ДОСТИЖЕНИЯ</h2>
     <div class="achievement_wrapper">
