--- a/src/html/pages/advantages.html
+++ b/src/html/pages/advantages.html
@@ -1,4 +1,4 @@
-<section class="advateges">
+<section class="advateges" id="advateges"> 
   <div class="container">
     <h2 class="title">ПРЕИМУЩЕСТВА РАБОТЫ С НАМИ</h2>
     <div
