--- a/src/html/pages/how-we-work.html
+++ b/src/html/pages/how-we-work.html
@@ -1,4 +1,4 @@
-<section class="how-we-work">
+<section class="how-we-work" id="how-we-work">
   <div class="how-we-work_content">
     <div class="item item_title">
       <h2 class="title">
