--- a/src/html/pages/main-page.html
+++ b/src/html/pages/main-page.html
@@ -1,4 +1,4 @@
-<section class="main_page" uk-parallax="bgy: -100">
+<section class="main_page lazy-background" id="main_page">
   <div class="main_wrapper">
     <div class="main_title_block">
       <div class="main_title_wrapper">
@@ -33,7 +33,6 @@
 
   <div
     class="main_footer_wrapper"
-    uk-scrollspy="cls: uk-animation-fade; target: .nj-p22; delay: 300; repeat: true"
   >
     <ul class="main_list">
       <li>
