--- a/src/html/pages/more-than-distribution.html
+++ b/src/html/pages/more-than-distribution.html
@@ -1,4 +1,4 @@
-<section class="more_distribution pd-regular">
+<section class="more_distribution pd-regular" id="more_distribution">
   <div class="container">
     <h2 class="title">БОЛЬШЕ ЧЕМ ДИСТРИБЬЮЦИЯ</h2>
     <div class="more_distribution_group">
