--- a/src/html/pages/offers-distribution.html
+++ b/src/html/pages/offers-distribution.html
@@ -1,4 +1,4 @@
-<section class="distribution_offer pd-regular">
+<section class="distribution_offer pd-regular" id="distribution_offer">
   <div class="distribution_offer_header">
     <div class="title_wrapp">
       <h2 class="title">ПРЕДЛОЖЕНИЕ ПО ДИСТРИБЬЮЦИИ</h2>
