--- a/src/html/pages/partner.html
+++ b/src/html/pages/partner.html
@@ -1,4 +1,4 @@
-<section class="partners pd-regular">
+<section class="partners pd-regular" id="partner">
   <div class="container">
     <h2 class="title">НАШИ ПАРТНЕРЫ</h2>
     <div class="partners_wrapper">
