done all, fix first page & added text & photo

--- a/src/html/pages/achievement.html
+++ b/src/html/pages/achievement.html
@@ -38,55 +38,55 @@
           благонадёжности среди конкурентов..
         </li>
       </ul>
-      <div class="achievement_images">
+      <div class="achievement_images lazy-background">
         <img
           id="image1"
-          src="../../img/advantages/advantages.png"
+          src="../../img/more-than-distrb/merch3.jpg"
           alt="Image description"
         />
         <img
           id="image2"
-          src="../../img/advantages/more-than-1.png"
+          src="../../img/more-than-distrb/office2.jpg"
           alt="Image description"
         />
         <img
           id="image3"
-          src="../../img/advantages/advantages.png"
+          src="../../img/more-than-distrb/merch-1.jpg"
           alt="Image description"
         />
         <img
           id="image4"
-          src="../../img/advantages/more-than-1.png"
+          src="../../img/more-than-distrb/merch4.jpg"
           alt="Image description"
         />
         <img
           id="image5"
-          src="../../img/advantages/advantages.png"
+          src="../../img/more-than-distrb/warehouse2.jpg"
           alt="Image description"
         />
         <img
           id="image6"
-          src="../../img/advantages/more-than-1.png"
+          src="../../img/more-than-distrb/merch2.jpg"
           alt="Image description"
         />
         <img
           id="image7"
-          src="../../img/advantages/advantages.png"
+          src="../../img/more-than-distrb/office1.jpg"
           alt="Image description"
         />
         <img
           id="image8"
-          src="../../img/advantages/more-than-1.png"
+          src="../../img/more-than-distrb/warehouse1.jpg"
           alt="Image description"
         />
         <img
           id="image9"
-          src="../../img/advantages/advantages.png"
+          src="../../img/more-than-distrb/merch-1.jpg"
           alt="Image description"
         />
         <img
           id="image10"
-          src="../../img/advantages/more-than-1.png"
+          src="../../img/more-than-distrb/office2.jpg"
           alt="Image description"
         />
         <img
