--- a/src/html/pages/advantages.html
+++ b/src/html/pages/advantages.html
@@ -7,37 +7,33 @@
       uk-slideshow="animation: push; autoplay: true"
     >
       <ul class="uk-slideshow-items">
+
         <li>
           <div
             class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
           >
-            <img src="../../img/advantages/advantages.png" alt="" uk-cover />
+            <img
+              loading="lazy"
+              src="../../img/office_automat2.webp"
+              alt=""
+              uk-cover
+            />
           </div>
           <div
             class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
           >
             <h3 class="uk-card-title">
-              Сбалансированная ассортиментная нагрузка на торгового
-              представителя.
+              Передовые стандарты.
             </h3>
             <ul class="uk-list uk-list-disc">
+              <li>Оцифрованный документооборот в том числе с представителями поставщиков, позволяет прозрачно и эффективно принимать решения и утверждать мероприятия.</li>
               <li>
-                Исключается каннибализм избыточным ассортиментом.Постоянные
-                программы обучения сотрудников, повышения навыков торговой
-                команды, традиции и наставничество над новыми сотрудниками.
+                Благодаря отлаженному внутреннему документообороту предприятие оперативно запускает любые маркетинговые мероприятия.
               </li>
               <li>
-                Эффективный контроль представленности продукции в торговых
-                точках.
+                Высокая автоматизация при необходимости позволяет назначать индивидуальные ценовые предложение каждому клиенту, вплоть до отдельных уникальных предложений ограниченных отдельными заказами.
               </li>
-              <li>Индивидуальный подход к клиенту.</li>
-              <li>Складское хозяйство с ЖД тупиками.</li>
-              <li>Высокая механизация складов.</li>
-              <li>
-                Постоянные программы обучения сотрудников, повышения навыков
-                торговой команды, традиции и наставничество над новыми
-                сотрудниками.
-              </li>
+              <li>Индивидуальный подход к каждому клиенту и поставщику с возможностью прямого обмена заказами, сверками, документами посредством собственного корпоративного портала и интеграция в системы обмена от поставщиков.</li>
             </ul>
           </div>
         </li>
@@ -45,10 +41,37 @@
           <div
             class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
           >
-            <img
-              src="https://thumbs.dreamstime.com/b/bearded-man-laptop-online-business-icons-serious-young-businessman-glasses-using-blurry-room-double-exposure-immersive-181501835.jpg"
-              alt=""
-              uk-cover
+            <img src="../../img/office_automat.webp" alt="" uk-cover 
+            loading="lazy"
+            />
+          </div>
+          <div
+            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
+          >
+            <h3 class="uk-card-title">
+              Автоматизированные бизнес-процессы.
+            </h3>
+            <ul class="uk-list uk-list-disc">
+              <li>
+                Автоматизированная система работы торгового представителя через мобильное приложение.  Оперативный доступ торгового представителя к остаткам подразделения отчетам по продажам в различных разрезах и периодах, акт сверки и другие отчеты. 
+              </li>
+              <li>
+                Мгновенное размещение и резервирование заказа. По необходимости схема продажи van selling.  Анкетирование и фотоотчеты. Мониторинг работы торгового представителя. Автоматизированный расчет маршрута, и планирование задач.               
+               </li>
+              <li>
+                Ежедневный разбор деятельности торгового представителя.
+              </li>
+              <li>Автоматизированная система работы доставки с расчетом эффективного маршрута и погрузки транспорта. Онлайн мониторинг доставки.</li>
+              <li>Собственная интернет-площадка (B2B), свой отдел разработки, присутствие на маркетплейсах банков.</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div
+            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
+          >
+            <img src="../../img/first-img.webp" alt="" uk-cover 
+            loading="lazy"
             />
           </div>
           <div
@@ -79,78 +102,7 @@
             </ul>
           </div>
         </li>
-        <li>
-          <div
-            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
-          >
-            <img src="../../img/advantages/advantages.png" alt="" uk-cover />
-          </div>
-          <div
-            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
-          >
-            <h3 class="uk-card-title">
-              Сбалансированная ассортиментная нагрузка на торгового
-              представителя.
-            </h3>
-            <ul class="uk-list uk-list-disc">
-              <li>
-                Исключается каннибализм избыточным ассортиментом.Постоянные
-                программы обучения сотрудников, повышения навыков торговой
-                команды, традиции и наставничество над новыми сотрудниками.
-              </li>
-              <li>
-                Эффективный контроль представленности продукции в торговых
-                точках.
-              </li>
-              <li>Индивидуальный подход к клиенту.</li>
-              <li>Складское хозяйство с ЖД тупиками.</li>
-              <li>Высокая механизация складов.</li>
-              <li>
-                Постоянные программы обучения сотрудников, повышения навыков
-                торговой команды, традиции и наставничество над новыми
-                сотрудниками.
-              </li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <div
-            class="uk-position-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left"
-          >
-            <img
-              src="https://thumbs.dreamstime.com/b/bearded-man-laptop-online-business-icons-serious-young-businessman-glasses-using-blurry-room-double-exposure-immersive-181501835.jpg"
-              alt=""
-              uk-cover
-            />
-          </div>
-          <div
-            class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-position-center-right"
-          >
-            <h3 class="uk-card-title">
-              Сбалансированная ассортиментная нагрузка на торгового
-              представителя.
-            </h3>
-            <ul class="uk-list uk-list-disc">
-              <li>
-                Исключается каннибализм избыточным ассортиментом.Постоянные
-                программы обучения сотрудников, повышения навыков торговой
-                команды, традиции и наставничество над новыми сотрудниками.
-              </li>
-              <li>
-                Эффективный контроль представленности продукции в торговых
-                точках.
-              </li>
-              <li>Индивидуальный подход к клиенту.</li>
-              <li>Складское хозяйство с ЖД тупиками.</li>
-              <li>Высокая механизация складов.</li>
-              <li>
-                Постоянные программы обучения сотрудников, повышения навыков
-                торговой команды, традиции и наставничество над новыми
-                сотрудниками.
-              </li>
-            </ul>
-          </div>
-        </li>
+        
       </ul>
       <div class="advantages_arrows">
         <a
