--- a/src/html/pages/how-we-work.html
+++ b/src/html/pages/how-we-work.html
@@ -1,5 +1,5 @@
-<section class="how-we-work" id="how-we-work">
-  <div class="how-we-work_content">
+<section class="how_we_work" id="how_we_work">
+  <div class="how_we_work-content">
     <div class="item item_title">
       <h2 class="title">
         КАК МЫ <br />
@@ -10,19 +10,25 @@
       <li class="item">
         <p class="item_text">ПРОИЗВОДИТЕЛЬ</p>
         <div class="svg_wrapp">
-          <img src="../../img/how_we_work/manufactur.svg" alt="" />
+          <img src="../../img/how_we_work/manufactur.svg" alt="ПРОИЗВОДИТЕЛЬ"
+          loading="lazy"
+          />
         </div>
       </li>
       <li class="item">
         <p class="item_text">ПОКУПАТЕЛЬ</p>
         <div class="svg_wrapp">
-          <img src="../../img/how_we_work/bayer.svg" alt="" />
+          <img src="../../img/how_we_work/bayer.svg" alt="ПОКУПАТЕЛЬ" 
+          loading="lazy"
+          />
         </div>
       </li>
       <li class="item">
         <p class="item_text">ДИСТРИБЬЮТОР</p>
         <div class="svg_wrapp">
-          <img src="../../img/how_we_work/distribution.svg" alt="" />
+          <img src="../../img/how_we_work/distribution.svg" alt="ДИСТРИБЬЮТОР" 
+          loading="lazy"
+          />
         </div>
       </li>
       <li class="item">
@@ -31,12 +37,16 @@
           МАГАЗИНЫ
         </p>
         <div class="svg_wrapp">
-          <img src="../../img/how_we_work/retaill.svg" alt="" />
+          <img src="../../img/how_we_work/retaill.svg" alt="РОЗНИЧНЫЕ МАГАЗИНЫ" 
+          loading="lazy"
+          />
         </div>
       </li>
     </ul>
     <div class="mobile_list_img">
-      <img src="../../img/how_we_work/mob_group.svg" alt="">
+      <img src="../../img/how_we_work/mob_group.svg" alt="схема работы ДИСТРИБЬЮТОР"
+      loading="lazy"
+      >
     </div>
   </div>
 </section>
