--- a/src/html/pages/main-page.html
+++ b/src/html/pages/main-page.html
@@ -1,3 +1,4 @@
+
 <section class="main_page lazy-background" id="main_page">
   <div class="main_wrapper">
     <div class="main_title_block">
@@ -54,5 +55,12 @@
         </p>
       </li>
     </ul>
+  </div>
+
+  <div class="video_inner">
+    <video autoplay muted loop controls loading="lazy">
+      <source src="../../img/img-anim.webm" type="video/mp4">
+    </video>
+    <img src="../../img/kz-img-bg.webp" alt="" loading="lazy">
   </div>
 </section>
