--- a/src/html/pages/achievement.html
+++ b/src/html/pages/achievement.html
@@ -3,41 +3,44 @@
     <h2 class="title">НАШИ ДОСТИЖЕНИЯ</h2>
     <div class="achievement_wrapper">
       <ul
-        class="achievement_list uk-list uk-list-disc"
-        uk-scrollspy="cls: uk-animation-fade; target: li; delay: 200; repeat: true"
-      >
-        <li id="achievement1">
-          Компания в период с 2018 года по 2023 года выросла в литрах в 8,9 раз
-        </li>
-        <li id="achievement2">
-          Мы обслуживаем 100% торговых точек на вверенной нам территории, при
-          наличии официальных документов у клиента.
-        </li>
-        <li id="achievement3">
-          Увеличили долю рынка по элитному алкоголю с 40% до 65%
-        </li>
-        <li id="achievement4">
-          Увеличили долю коньяка Казахстанской продукции с 45% до 70%
-        </li>
-        <li id="achievement5">По продуктам питания с 10% до 35%.</li>
-        <li id="achievement6">Наш штат увеличился с 2018 года по 2023 с до</li>
-        <li id="achievement7">Торговая команда – 94 менеджера по продажам</li>
-        <li id="achievement8">Отдел доставки – 22 транспортных средства</li>
-        <li id="achievement9">
-          Складские площади – 3260 кв.м. многоярусных складских помещений.
-        </li>
-        <li id="achievement10">
-          Согласно данным проекта ABIS - Atameken Business
-        </li>
-        <li id="achievement11">
-          Information Services наш ИДН 798, что говорит о наших минимальных
-          налоговых рисках.
-        </li>
-        <li id="achievement12">
-          Согласно данным проекта kompra.kz компания АДЖИП лидер по
-          благонадёжности среди конкурентов..
-        </li>
-      </ul>
+      class="achievement_list uk-list uk-list-disc"
+      uk-scrollspy="cls: uk-animation-fade; target: li; delay: 200; repeat: true"
+    >
+      <li id="achievement1">
+        Компания за период с 2018 по 2023 год выросла в объемах продаж в 8,9 раза
+      </li>
+      <li id="achievement2">
+        Мы обслуживаем 100% торговых точек на вверенной нам территории при наличии официальных документов у клиента.
+      </li>
+      <li id="achievement3">
+        Увеличили долю рынка по элитному алкоголю с 40% до 65%.
+      </li>
+      <li id="achievement4">
+        Увеличили долю коньяка казахстанской продукции с 45% до 70%.
+      </li>
+      <li id="achievement5">
+        По продуктам питания доля увеличена с 10% до 35%.
+      </li>
+      <li id="achievement6">
+        Штат компании увеличился с 2018 по 2023 год.
+      </li>
+      <li id="achievement7">
+        Торговая команда состоит из 94 менеджеров по продажам.
+      </li>
+      <li id="achievement8">
+        Отдел доставки включает 22 транспортных средства.
+      </li>
+      <li id="achievement9">
+        Складские площади составляют 3260 кв. м многоярусных складских помещений.
+      </li>
+      <li id="achievement10">
+        Согласно данным проекта ABIS - Atameken Business Information Services, наш ИДН 798, что свидетельствует о минимальных налоговых рисках.
+      </li>
+      <li id="achievement11">
+        Согласно данным проекта kompra.kz, компания АДЖИП является лидером по благонадёжности среди конкурентов.
+      </li>
+    </ul>
+    
       <div class="achievement_images lazy-background">
         <img
           id="image1"
@@ -46,7 +49,7 @@
         />
         <img
           id="image2"
-          src="../../img/more-than-distrb/office2.jpg"
+          src="../../img/1200x600/1.jpeg"
           alt="Image description"
         />
         <img
@@ -61,7 +64,7 @@
         />
         <img
           id="image5"
-          src="../../img/more-than-distrb/warehouse2.jpg"
+          src="../../img/1200x600/3.jpeg"
           alt="Image description"
         />
         <img
@@ -71,12 +74,12 @@
         />
         <img
           id="image7"
-          src="../../img/more-than-distrb/office1.jpg"
+          src="../../img/1200x600/5.jpeg"
           alt="Image description"
         />
         <img
           id="image8"
-          src="../../img/more-than-distrb/warehouse1.jpg"
+          src="../../img/1200x600/11.png"
           alt="Image description"
         />
         <img
@@ -86,17 +89,17 @@
         />
         <img
           id="image10"
-          src="../../img/more-than-distrb/office2.jpg"
+          src="../../img/1200x600/12.png"
           alt="Image description"
         />
         <img
           id="image11"
-          src="../../img/advantages/advantages.png"
+          src="../../img/1200x600/13.png"
           alt="Image description"
         />
         <img
           id="image12"
-          src="../../img/advantages/more-than-1.png"
+          src="../../img/1200x600/2.jpeg"
           alt="Image description"
         />
       </div>
