--- a/src/html/pages/main-page.html
+++ b/src/html/pages/main-page.html
@@ -58,9 +58,9 @@
   </div>
 
   <div class="video_inner">
-    <video autoplay muted loop controls loading="lazy">
+    <video id="myVideo" autoplay muted loop controls loading="lazy">
       <source src="../../img/img-anim.webm" type="video/mp4">
     </video>
-    <img src="../../img/kz-img-bg.webp" alt="" loading="lazy">
+    <img src="../../img/kz-img-bg.webp" alt=" Уникальное предложение" loading="lazy">
   </div>
 </section>
