--- a/src/html/pages/more-than-distribution.html
+++ b/src/html/pages/more-than-distribution.html
@@ -4,58 +4,44 @@
     <div class="more_distribution_group">
       <div class="more_distribution_group_text">
         <p class="nj-p18">
-          Достоинство партнерских программ — их взаимная выгода. Помимо ранее
-          упомянутых преимуществ сотрудничества с нашей компаний как с
-          дистрибьютором акцентируем ваше внимание на финансово-экономическом
-          преимуществе работы через дистрибьютора:
+          Достоинство партнерских программ — их взаимная выгода. Помимо ранее упомянутых преимуществ сотрудничества с нашей компанией как с дистрибьютором, акцентируем ваше внимание на финансово-экономическом преимуществе работы через дистрибьютора:
         </p>
         <ol class="more_distribution_list">
           <li class="more_distribution_item">
             <p>
-              Все риски, связанные с платёжеспособностью клиентов, несет
-              дистрибьютор.
+              Все риски, связанные с платежеспособностью клиентов, несет дистрибьютор.
             </p>
           </li>
           <li class="more_distribution_item">
-            <p>Риски связные с хранением ТМЦ также несет дистрибьютор.</p>
+            <p>Риски, связанные с хранением ТМЦ, также несет дистрибьютор.</p>
           </li>
           <li class="more_distribution_item">
             <p>
-              Освобождение финансовых средств, кото­рые могли бы быть затрачены
-              для постро­ения собственного представительства.
-            </p>
-          </li>
-          <li class="more_distribution_item">
-            <p>
-              Минимизируется период входа на рынок т.к. Мы прекрасно
-              ориентируемся в ситуации на Западно-Казахстанском рынке. А это
-              значит, что можем держать постоянно в курсе производителя: о
-              конкурентах, о состо­янии рынка, о покупателях и т.д.
+              Освобождение финансовых средств, которые могли бы быть затрачены на построение собственного представительства.
             </p>
           </li>
           <li class="more_distribution_item">
             <p>
-              Исключение оптовых посредников в канале распределе­ния позволяет
-              нам получать максимально качественную информацию о сбыте по
-              розничным торговым точкам и предоставлять данную информацию
-              производителю.
+              Минимизируется период входа на рынок, так как мы прекрасно ориентируемся в ситуации на Западно-Казахстанском рынке. Это значит, что мы можем постоянно держать производителя в курсе о конкурентах, состоянии рынка, о покупателях и т.д.
             </p>
           </li>
           <li class="more_distribution_item">
             <p>
-              Многолетнее взаимовыгодное сотрудничество с локальным розничным
-              бизнесом.
+              Исключение оптовых посредников в канале распределения позволяет нам получать максимально качественную информацию о сбыте по розничным торговым точкам и предоставлять данную информацию производителю.
             </p>
           </li>
           <li class="more_distribution_item">
             <p>
-              Мы отлично знаем рекламный рынок региона и знаем наи­более
-              эффективные пути воздействия рекламы на потре­бителя.
+              Многолетнее взаимовыгодное сотрудничество с локальным розничным бизнесом.
+            </p>
+          </li>
+          <li class="more_distribution_item">
+            <p>
+              Мы отлично знаем рекламный рынок региона и знаем наиболее эффективные пути воздействия рекламы на потребителя.
             </p>
           </li>
         </ol>
       </div>
-
       <div class="more_distribution_group_gallery">
         <div id="more-than-distr-slider" class="splide">
           <div class="splide__track">
@@ -63,114 +49,132 @@
               <li class="splide__slide">
                 <img
                   src="https://s.wsj.net/public/resources/images/BN-PU621_pernod_GR_20160913084243.jpg"
+                  alt="Display image"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/warehouse1.jpg"
+                  alt="Warehouse"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/merch-1.jpg"
+                  alt="Merchandise"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/office1.jpg"
+                  alt="Office"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/warehouse2.jpg"
+                  alt="Warehouse 2"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/merch2.jpg"
+                  alt="Merchandise 2"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/office2.jpg"
+                  alt="Office 2"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/merch3.jpg"
+                  alt="Merchandise 3"
                 />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/office3.jpg"
+                  alt="Office 3"
                   loading="lazy"
-                  />
+                />
               </li>
             </ul>
           </div>
         </div>
-
+      
         <div id="more-than-distr-thumbnail-slider" class="splide">
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
                 <img
                   src="https://s.wsj.net/public/resources/images/BN-PU621_pernod_GR_20160913084243.jpg"
+                  alt="Thumbnail image"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/warehouse1.jpg"
+                  alt="Thumbnail warehouse"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/merch-1.jpg"
+                  alt="Thumbnail merchandise"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/office1.jpg"
+                  alt="Thumbnail office"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/warehouse2.jpg"
+                  alt="Thumbnail warehouse 2"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/merch2.jpg"
+                  alt="Thumbnail merchandise 2"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/office2.jpg"
+                  alt="Thumbnail office 2"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/merch3.jpg"
+                  alt="Thumbnail merchandise 3"
                   loading="lazy"
-                  />
+                />
               </li>
               <li class="splide__slide">
                 <img
                   src="../../img/more-than-distrb/office3.jpg"
+                  alt="Thumbnail office 3"
                   loading="lazy"
-                  />
+                />
               </li>
             </ul>
           </div>
