--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -6,50 +6,50 @@
     >
       О КОМПАНИИ
     </h2>
-    <ul
-      class="about_list">
+    <ul class="about_list">
       <!-- uk-parallax="opacity: 0,1; y: 100,0; end: 50vh + 50%;" -->
-
+    
       <li>
         <p>
-          Компания «АДЖИП» начала свою историю в г. Атырау с мая 2017 г, прямая
-          дистрибьюция и логистика FMCG . ТОО АДЖИП обеспечивает дистрибьюцию по
-          всем каналам сбыта в том числе через собственные интернет площадки и
-          собственные специализированные магазины.
+          Компания «АДЖИП» начала свою историю в г. Атырау с мая 2017 г., занимаясь прямой
+          дистрибьюцией и логистикой FMCG. ТОО АДЖИП обеспечивает дистрибьюцию по
+          всем каналам сбыта, в том числе через собственные интернет-площадки и
+          специализированные магазины.
         </p>
       </li>
       <li>
         <p>
-          Штаб квартира расположена в городе Атырау, представительства со своими
-          складскими площадями и торговыми командами в г.Актобе, г.Кульсары,
-          г.Уральск. В течении 5 лет вышли в топ 3 лучших дистрибьюторов
+          Штаб-квартира расположена в городе Атырау. У компании есть представительства со своими
+          складскими площадями и торговыми командами в г. Актобе, г. Кульсары,
+          г. Уральск. За 5 лет компания вошла в топ-3 лучших дистрибьюторов
           западного Казахстана.
         </p>
       </li>
       <li>
         <p>
-          Компания была создана профессиональными менеджерами запускавшими самые
-          успешные дистрибьюторские и розничные компании как в Атырау так и в
-          других регионах Казахстана.
+          Компания была создана профессиональными менеджерами, ранее запускавшими успешные
+          дистрибьюторские и розничные компании как в Атырау, так и в других
+          регионах Казахстана.
         </p>
       </li>
       <li>
         <p>
-          Наше основание это профессионализм и партнерские отношения с
+          Нашим основанием являются профессионализм и партнерские отношения с
           производителями.
         </p>
       </li>
       <li>
         <p>
-          Наша финансовая устойчивость и технологии позволяют уверенно смотреть
+          Наша финансовая устойчивость и передовые технологии позволяют уверенно смотреть
           в будущее.
         </p>
       </li>
       <li>
         <p>
-          Мы готовы осваивать как новые рынки сбыта так и новые группы товаров.
+          Мы готовы осваивать как новые рынки сбыта, так и новые группы товаров.
         </p>
       </li>
     </ul>
+    
   </div>
 </section>
